[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/direction_finder.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/enemies/enemy.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "hurt"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.647059, 0.0470588, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Enemy" type="Node2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
z_index = 1

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]

[node name="KnockbackTween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hurt = SubResource( 1 )

[node name="DirectionFinder" parent="." instance=ExtResource( 1 )]
only_x_axis = true

[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="tween_completed" from="KnockbackTween" to="." method="_on_KnockbackTween_tween_completed"]
